[project]
name = "km_apiserver"
version = "0.1.0"
requires-python = ">=3.10"

dependencies = [
  "jupyter-client>=8.0.0,<9.0.0",
  "jupyter-server>=2.0.0,<3.0.0",
  "kubernetes>=24.0.0,<25.0.0",
  "pydantic>=2.0.0,<3.0.0",
  "tornado>=6.3.0,<7.0.0"
]

[project.optional-dependencies]
tests = [
  "pytest",
  "pytest-asyncio",
  "pytest-cov",
  "pytest-xdist"
]

fmt = [
  "ruff"
]

[tool.pytest.ini_options]
addopts = "--cov=km_apiserver --cov-report=term-missing:skip-covered"

[tool.uv]
package = false

[tool.coverage.run]
source_pkgs = ["km_apiserver"]
branch = true
parallel = true
omit = [
  "km_apiserver/jupyter_kernel_client/models/*.py",
  "km_apiserver/__main__.py",
]

[tool.coverage.paths]
km_apiserver = ["km_apiserver"]
tests = ["tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]


[tool.ruff]
# Allow lines to be as long as 120.
line-length = 120

